force-app/volunteers/objects/VolunteerActivityPosition__c/fields/NumberOfVolunteersNeeded__c.field-meta.xml
<CustomField>
    <fullName>NumberOfVolunteersNeeded__c</fullName>
    <label>Number of Volunteers Needed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>