force-app/volunteers/objects/VolunteerActivityPosition__c/fields/VolunteerActivity__c.field-meta.xml
<CustomField>
    <fullName>VolunteerActivity__c</fullName>
    <label>Volunteer Activity</label>
    <referenceTo>Volunteer_Activity__c</referenceTo>
    <relationshipLabel>Volunteer Activity Positions</relationshipLabel>
    <relationshipName>VolunteerActivityPositions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>