force-app/volunteers/objects/VolunteerActivityPosition__c/fields/VolunteerPosition__c.field-meta.xml
<CustomField>
    <fullName>VolunteerPosition__c</fullName>
    <label>Volunteer Position</label>
    <referenceTo>VolunteerPosition__c</referenceTo>
    <relationshipLabel>Volunteer Activity Positions</relationshipLabel>
    <relationshipName>VolunteerActivityPositions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>